Fixed CSS error not showing whitespace

--- a/styles/main.less
+++ b/styles/main.less
@@ -43,7 +43,8 @@
   .cm-dk-whitespace-empty-line-space {
     .shared_style1;
     &:before {
-      .shared_style1 left: 50%;
+      .shared_style2;
+      left: 50%;
       width: 0.2ex;
       margin-left: -0.1ex;
       min-width: 2px;
@@ -56,7 +57,8 @@
   .cm-dk-whitespace-empty-line-tab {
     .shared_style1;
     &:before {
-      .shared_style1 left: 0.2ex;
+     .shared_style2;
+      left: 0.2ex;
       right: 0.2ex;
       min-width: 2px;
       min-height: 1px;
@@ -68,11 +70,12 @@
   .cm-dk-whitespace-empty-line-zenkaku {
     .shared_style1;
     &:before {
-      left: 0.3ex;
-      right: 0.3ex;
-      top: 0.2ex;
+      left: 0.4ex;
+      right: 0.2ex;
+      top: 0.4ex;
       bottom: 0.2ex;
-      min-width: 1em;
+      height: 0.7em;
+      width: 0.5em;
     }
   }
 }
